--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,7 +10,20 @@
     {{ content_for_header }}
   </head>
 
-  <body class="gradient">
+  <body class="gradient template-{{ template }}">
+    <header>
+      {% if template != 'cart' %}
+        <a href="/cart" class="cart__link">
+          {% if cart.item_count > 0 %}
+            {{ 'cart.button.filled' | t }}
+          {% else %}
+            {{ 'cart.button.empty' | t }}
+          {% endif %}
+        </a>
+      {% else %}
+        <a href="/" class="home__link">{{ 'cart.button.close' | t }}</a>
+      {% endif %}
+    </header>
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
