--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -1,4 +1,4 @@
-{{ 'component-cart.css' | asset_url | stylesheet_tag }}
+{% comment %} {{ 'component-cart.css' | asset_url | stylesheet_tag }}
 {{ 'component-totals.css' | asset_url | stylesheet_tag }}
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
 {{ 'component-discounts.css' | asset_url | stylesheet_tag }}
@@ -134,4 +134,4 @@
     }
   ]
 }
-{% endschema %}
+{% endschema %} {% endcomment %}
